Validated service.html

--- a/member.html
+++ b/member.html
@@ -41,9 +41,9 @@
             <div class="container-jc developers-container">
                 <div class="image-jc developers-image">
                     <div class="jc thin-border">
-                        <img class="jc-backdesign" src="./assets/images/three-diamonds 1.svg" alt="three-diamonds">
+                        <img class="jc-backdesign" src="./assets/images/three-diamonds-1.svg" alt="three-diamonds">
                         <div class="jc fill-background">
-                            <img src="./assets/images/JC 1.png" alt="JC Image">
+                            <img src="./assets/images/JC-1.png" alt="JC Image">
                         </div>
                     </div>
                 </div>
@@ -76,9 +76,9 @@
                 </div>
                 <div class="image-tricia developers-image">
                     <div class="tricia thin-border">
-                        <img class="tricia-backdesign" src="./assets/images/Three Circles.svg" alt="Three Circles">
+                        <img class="tricia-backdesign" src="./assets/images/Three-Circles.svg" alt="Three Circles">
                         <div class="tricia fill-background">
-                            <img src="./assets/images/twicia 1.png" alt="JC Image">
+                            <img src="./assets/images/twicia-1.png" alt="JC Image">
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                     <div class="prince thin-border">
                         <img class="prince-backdesign" src="./assets/images/Hanger-Overlaps.svg" alt="Hanger-Overlaps">
                         <div class="prince fill-background">
-                            <img src="./assets/images/prince 1.png" alt="JC Image">
+                            <img src="./assets/images/prince-1.png" alt="JC Image">
                         </div>
                     </div>
                 </div>
