--- a/service.html
+++ b/service.html
@@ -44,7 +44,7 @@
         <section id="service-content" class="service-content">
             <div class="service-content-container">
                 <div class="service-content-description">
-                    <img class="service-content-icon service-content" src="./assets/images/html-end-tag 1.svg"
+                    <img class="service-content-icon service-content" src="./assets/images/html-end-tag-1.svg"
                         alt="HTML End Tag">
                     <h2 class="service-content-title service-content">Web <br> Development</h2>
                     <img class="service-line-design service-content" src="./assets/images/service-line.svg"
@@ -55,7 +55,7 @@
                     </p>
                 </div>
                 <div class="service-content-description">
-                    <img class="service-content-icon service-content" src="./assets/images/mobile-alt-solid 1.svg"
+                    <img class="service-content-icon service-content" src="./assets/images/mobile-alt-solid-1.svg"
                         alt="Mobile Icon">
                     <h2 class="service-content-title service-content">Mobile Development</h2>
                     <img class="service-line-design service-content" src="./assets/images/service-line.svg"
@@ -66,7 +66,7 @@
                     </p>
                 </div>
                 <div class="service-content-description">
-                    <img class="service-content-icon service-content" src="./assets/images/pencil-ruler-solid 1.svg"
+                    <img class="service-content-icon service-content" src="./assets/images/pencil-ruler-solid-1.svg"
                         alt="Pencil & Ruler Icon">
                     <h2 class="service-content-title service-content">Product <br> Design</h2>
                     <img class="service-line-design service-content" src="./assets/images/service-line.svg"
@@ -77,7 +77,7 @@
                     </p>
                 </div>
                 <div class="service-content-description">
-                    <img class="service-content-icon service-content" src="./assets/images/network-wired-solid 1.svg"
+                    <img class="service-content-icon service-content" src="./assets/images/network-wired-solid-1.svg"
                         alt="HTML End Tag">
                     <h2 class="service-content-title service-content">System <br> Encoding</h2>
                     <img class="service-line-design service-content" src="./assets/images/service-line.svg"
@@ -93,23 +93,23 @@
     <footer id="work-container" class="work-container">
         <div class="work-main-container">
             <div class="worked work-content">
-                <img class="work-icon work-inside-content" src="./assets/images/clock-solid 1.svg" alt="clock-icon">
+                <img class="work-icon work-inside-content" src="./assets/images/clock-solid-1.svg" alt="clock-icon">
                 <p><span id="work-number" class="work-number work-inside-content">432</span></p>
                 <p class="work-description work-inside-content">Hours Worked</p>
             </div>
             <div class="lines-code work-content">
-                <img class="work-icon work-inside-content" src="./assets/images/laptop-code-solid 1.svg"
+                <img class="work-icon work-inside-content" src="./assets/images/laptop-code-solid-1.svg"
                     alt="laptop-icon">
                 <p><span id="line-code" class="work-number work-inside-content">3679</span></p>
                 <p class="work-description work-inside-content">Lines of Code</p>
             </div>
             <div class="happy-client work-content">
-                <img class="work-icon work-inside-content" src="./assets/images/user-solid 1.svg" alt="user-icon">
+                <img class="work-icon work-inside-content" src="./assets/images/user-solid-1.svg" alt="user-icon">
                 <p><span id="client-number" class="work-number work-inside-content">389</span></p>
                 <p class="work-description work-inside-content">Happy Clients</p>
             </div>
             <div class="happy-client work-content">
-                <img class="work-icon work-inside-content" src="./assets/images/trophy-solid 1.svg" alt="trophy-icon">
+                <img class="work-icon work-inside-content" src="./assets/images/trophy-solid-1.svg" alt="trophy-icon">
                 <p><span id="award-number" class="work-number work-inside-content">254</span></p>
                 <p class="work-description work-inside-content">Awards</p>
             </div>
@@ -140,7 +140,6 @@
 
     <!-- WAYPOINT -->
     <script src="./assets/javascript/waypoints-master/lib/jquery.waypoints.js"></script>
-    </script>
 
     <!-- COUNTERUP -->
     <script src="./assets/javascript/jquery.counterup-master/jquery.counterup.js"></script>
