Adding developer-description and rename image name

--- a/index.html
+++ b/index.html
@@ -74,29 +74,29 @@
 
             if (windowSize >= 1920) {
                 circleLines.src = './assets/images/circle-lines.png';
-                circleDarkColor.src = './assets/images/Ellipse 2.png';
-                circleLightColor.src = './assets/images/Ellipse 1.png';
-                rectangleBlack.src = './assets/images/Rectangle 9.png';
+                circleDarkColor.src = './assets/images/Ellipse-2.png';
+                circleLightColor.src = './assets/images/Ellipse-1.png';
+                rectangleBlack.src = './assets/images/Rectangle-9.png';
             } else if (windowSize >= 1200 && windowSize <= 1919) {
                 circleLines.src = './assets/images/circle-lines-1200.png';
-                circleDarkColor.src = './assets/images/Ellipse 2-1200.png';
-                circleLightColor.src = './assets/images/Ellipse 1-1200.png';
-                rectangleBlack.src = './assets/images/Rectangle 9-1200.png';
+                circleDarkColor.src = './assets/images/Ellipse-2-1200.png';
+                circleLightColor.src = './assets/images/Ellipse-1-1200.png';
+                rectangleBlack.src = './assets/images/Rectangle-9-1200.png';
             } else if (windowSize >= 992 && windowSize < 1200) {
                 circleLines.src = './assets/images/circle-lines-992.png';
-                circleDarkColor.src = './assets/images/Ellipse 2-992.png';
-                circleLightColor.src = './assets/images/Ellipse 1-992.png';
-                rectangleBlack.src = './assets/images/Rectangle 9-992.png';
+                circleDarkColor.src = './assets/images/Ellipse-2-992.png';
+                circleLightColor.src = './assets/images/Ellipse-1-992.png';
+                rectangleBlack.src = './assets/images/Rectangle-9-992.png';
             } else if (windowSize >= 768 && windowSize < 992) {
                 circleLines.src = './assets/images/circle-lines-768.png';
-                circleDarkColor.src = './assets/images/Ellipse 2-768.png';
-                circleLightColor.src = './assets/images/Ellipse 1-768.png';
-                rectangleBlack.src = './assets/images/Rectangle 9-768.png';
+                circleDarkColor.src = './assets/images/Ellipse-2-768.png';
+                circleLightColor.src = './assets/images/Ellipse-1-768.png';
+                rectangleBlack.src = './assets/images/Rectangle-9-768.png';
             } else if (windowSize < 768) {
                 circleLines.src = './assets/images/circle-lines-480.png';
-                circleDarkColor.src = './assets/images/Ellipse 2-480.png';
-                circleLightColor.src = './assets/images/Ellipse 1-480.png';
-                rectangleBlack.src = './assets/images/Rectangle 9-480.png';
+                circleDarkColor.src = './assets/images/Ellipse-2-480.png';
+                circleLightColor.src = './assets/images/Ellipse-1-480.png';
+                rectangleBlack.src = './assets/images/Rectangle-9-480.png';
             }
         });
     </script>
