Contact page issue solved

--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                                 <input class="contact-page-box email-input" id="email" name="email"
                                     placeholder="Enter your Email" type="email" required="required">
                             </div>
-                            <div class="contact-page message-form">
+                            <div class="contact-page message-form-contact-page">
                                 <textarea class="contact-page-box message-input" id="textarea" name="textarea"
                                     placeholder="Your Message..." cols="40" rows="5" required="required"
                                     oninvalid="alert('Fill up the First Name');"></textarea>
