About us description added, About Page Responsiveness

--- a/about.html
+++ b/about.html
@@ -48,16 +48,10 @@
             <div class="about-left-description">
                 <p class="highlighted">Few words</p>
                 <h2 class="aboutus-title-description">ABOUT US</h2>
-                <p class="about-us-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer blandit
-                    venenatis ipsum dictum
-                    pretium.
-                    Morbi at sem in lacus consequat consectetur. Nam nisi velit, luctus eu interdum vitae, rutrum nec
-                    augue.
-                    Etiam in laoreet lorem. Vivamus faucibus ligula ac ligula tincidunt tempus vitae ut nisl.
-                    <br>
-                    <br>
-                    Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec sodales
-                    neque eget augue dignissim, eu venenatis velit blandit. Fusce vestibulum varius mi vel ultrices.
+                <p class="about-us-description">The ALPHA is a group of young web developers based in Manila,
+                    Philippines. Highly-trained and skilled by the Far Eastern University Institute of Technology.
+                    Our passion and goal has led us in becoming experts in the field of Information Technology and have
+                    been helping clients in terms of web development.
                 </p>
             </div>
             <div class="aboutus-image-right">
@@ -69,30 +63,28 @@
             <div class="quality-content about-content-container">
                 <img class="content-icons quality-content-img" src="./assets/images/gem-regular-1.svg" alt="gem-image">
                 <h2 class="content-title">Quality</h2>
-                <p class="content-description">Donec sodales neque eget augue dignissim, eu venenatis velit blandit.
-                    Fusce vestibulum varius mi vel
-                    ultrices. </p>
+                <p class="content-description">Our team is ensuring our clients that we will be providing them the most
+                    reliable, trusted, and secured systems.</p>
             </div>
             <div class="profession-content about-content-container">
                 <img class="content-icons" src="./assets/images/thumbs-up-regular-1.svg" alt="thumbs-up-image">
                 <h2 class="content-title">Professionalism</h2>
-                <p class="content-description">Donec sodales neque eget augue dignissim, eu venenatis velit blandit.
-                    Fusce vestibulum varius mi vel
-                    ultrices. </p>
+                <p class="content-description">Team-Player. Persistent. Goal-Driven. Competent. These traits are
+                    possessed by the ALPHA that makes them professional.</p>
             </div>
             <div class="experience-content about-content-container">
                 <img class="content-icons" src="./assets/images/briefcase-solid-1.svg" alt="briefcase-image">
                 <h2 class="content-title">Experience</h2>
-                <p class="content-description">Donec sodales neque eget augue dignissim, eu venenatis velit blandit.
-                    Fusce vestibulum varius mi vel
-                    ultrices. </p>
+                <p class="content-description">The ALPHA Team have worked with different clients who has different
+                    demands, personalities and who are in different fields of profession. Have gained experience and
+                    expertise in handling and providing the best service we could provide for them.</p>
             </div>
             <div class="honors-content about-content-container">
                 <img class="content-icons" src="./assets/images/award-solid-1.svg" alt="award-image">
                 <h2 class="content-title">Honors</h2>
-                <p class="content-description">Donec sodales neque eget augue dignissim, eu venenatis velit blandit.
-                    Fusce vestibulum varius mi vel
-                    ultrices. </p>
+                <p class="content-description">•Awarded as the "Most Outstanding Web Developers in Southeast Asia" in
+                    2018 during the Southeast Asian Information Technology Fair in Kuala Lumpur, Malaysia.
+                    <br>•Considered as one of the "Best Digital Work" in 2019 AIMIA Awards in Adelaide, Australia</p>
             </div>
             <img class="contact-design-top" src="./assets/images/contact-top-design.png" alt="contact-top-design">
         </section>
