--- a/service.html
+++ b/service.html
@@ -50,8 +50,9 @@
                     <img class="service-line-design service-content" src="./assets/images/service-line.svg"
                         alt="service line design">
                     <p class="service-description service-content">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at nibh dolor. Nulla nec
-                        aliquet mi.
+                        Our team has been skilled and trained in providing our clients a server for business purposes or
+                        an online system using certain programming languages such as HTML, CSS/SASS, JavaScript, JSON,
+                        AJAX and more.
                     </p>
                 </div>
                 <div class="service-content-description">
@@ -61,8 +62,8 @@
                     <img class="service-line-design service-content" src="./assets/images/service-line.svg"
                         alt="service line design">
                     <p class="service-description service-content">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at nibh dolor. Nulla nec
-                        aliquet mi.
+                        We could develop and help enhance the quality and responsiveness of the mobile versions of our
+                        client's websites.
                     </p>
                 </div>
                 <div class="service-content-description">
@@ -72,8 +73,8 @@
                     <img class="service-line-design service-content" src="./assets/images/service-line.svg"
                         alt="Network Icon">
                     <p class="service-description service-content">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at nibh dolor. Nulla nec
-                        aliquet mi.
+                        With the marketing and creative expertise our team has developed these years, we will be
+                        providing you the best logo, and digital art that would make your brand stand out among others.
                     </p>
                 </div>
                 <div class="service-content-description">
@@ -83,8 +84,8 @@
                     <img class="service-line-design service-content" src="./assets/images/service-line.svg"
                         alt="service line design">
                     <p class="service-description service-content">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at nibh dolor. Nulla nec
-                        aliquet mi.
+                        Well-experienced in solving and finding a solution to certain problems usually encountered by
+                        the machines.
                     </p>
                 </div>
             </div>
