Skills description added and responsiveness

--- a/service.html
+++ b/service.html
@@ -38,8 +38,8 @@
             </div>
         </section>
         <section class="sub-description-container">
-            <p class="sub-description">Vivamus neque augue, iaculis id tincidunt nec,
-                accumsan non purus.</p>
+            <p class="sub-description">Encompass both computers and people using including programming skills in
+                front-end languages. Responsive Design. Analytical Skills.</p>
         </section>
         <section id="service-content" class="service-content">
             <div class="service-content-container">
