--- a/member.html
+++ b/member.html
@@ -68,13 +68,23 @@
                 <div class="description-tricia developers-description view-height">
                     <h1 class="developer-name">Tricia Dorine Relox</h1>
                     <p class="skills">Web Developer</p>
-                    <p class="developer-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Pellentesque quis magna vel tortor
-                        bibendum porta. In sagittis dapibus quam id euismod. Curabitur mattis eleifend varius. Sed
-                        mattis nibh ipsum, sed rutrum odio congue id. Suspendisse fermentum nisi sapien, at suscipit
-                        purus ultrices et. Praesent ut ex diam. Nam aliquam fermentum consequat. Mauris malesuada nisl
-                        nec volutpat efficitur. Etiam sagittis viverra sollicitudin. Aliquam malesuada nulla non enim
-                        egestas tempor.</p>
+                    <p class="developer-description">
+                    A novice college web developer who has been connected with the web development industry and
+                    information technology for a couple of years.
+
+                    Well-organized person, independent student with high attention to detail.
+                    Proficient with different programming languages: Java, Python and Oracle SQL, just to 
+                    name a few and willing to learn more languages in the future. In fact, she has 
+                    gathered her first MTA certification in Fundamentals of Database in November 2019 
+                    and since then, she has been establishing mostly of her projects in GitHub with 
+                    different programming languages.
+
+                    Aside from learning the advancements of technology, she is also a fan of different 
+                    hobbies. She succesfully put up her own personal blog back then.
+
+                    Interested with learning the entire backend spectrum and well-informed with
+                    producing a well-design graphical user interface wireframes with the use
+                    of different editing softwares.</p>
                 </div>
                 <div class="image-tricia developers-image">
                     <div class="tricia thin-border">
