Contact Issue Solveddddddd

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <main>
         <section class="main-section">
-            <a href="./contact.html" class="contact-button contact">Contact Us</a>
+            <a href="./contact.html" class="contact-button contact"><span class="contact-us-text">Contact Us</span></a>
             <div class="index-main-container">
                 <div class="main-title">
                     <h1 class="alpha">ALPHA DEVELOPERS</h1>
