Contact Page Form Reponsiveness Issue Solved

--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
 
     <script>
-        window.addEventListener('load', function () {
+        /*         window.addEventListener('load', function () {
             document.documentElement.scrollTop = 0;
             $("#firstname-contact-page").val("");
             $("#lastname-contact-page").val("");
             $("#email").val("");
             $("#textarea").val("");
-        });
+        }); */
     </script>
 
 </head>
