--- a/service.html
+++ b/service.html
@@ -58,7 +58,7 @@
                 <div class="service-content-description">
                     <img class="service-content-icon service-content" src="./assets/images/mobile-alt-solid-1.svg"
                         alt="Mobile Icon">
-                    <h2 class="service-content-title service-content">Mobile Development</h2>
+                    <h2 class="service-content-title service-content">Mobile <br> Development</h2>
                     <img class="service-line-design service-content" src="./assets/images/service-line.svg"
                         alt="service line design">
                     <p class="service-description service-content">
