--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="copyright-main-page">
+            <div class="copyright-main-page-member-page">
                 <p>@ Copyright Alpha 2020.</p>
             </div>
         </section>
