--- a/member.html
+++ b/member.html
@@ -69,22 +69,22 @@
                     <h1 class="developer-name">Tricia Dorine Relox</h1>
                     <p class="skills">Web Developer</p>
                     <p class="developer-description">
-                    A novice college web developer who has been connected with the web development industry and
-                    information technology for a couple of years.
+                        A novice college web developer who has been connected with the web development industry and
+                        information technology for a couple of years.
 
-                    Well-organized person, independent student with high attention to detail.
-                    Proficient with different programming languages: Java, Python and Oracle SQL, just to 
-                    name a few and willing to learn more languages in the future. In fact, she has 
-                    gathered her first MTA certification in Fundamentals of Database in November 2019 
-                    and since then, she has been establishing mostly of her projects in GitHub with 
-                    different programming languages.
+                        Well-organized person, independent student with high attention to detail.
+                        Proficient with different programming languages: Java, Python and Oracle SQL, just to
+                        name a few and willing to learn more languages in the future. In fact, she has
+                        gathered her first MTA certification in Fundamentals of Database in November 2019
+                        and since then, she has been establishing mostly of her projects in GitHub with
+                        different programming languages.
 
-                    Aside from learning the advancements of technology, she is also a fan of different 
-                    hobbies. She succesfully put up her own personal blog back then.
+                        Aside from learning the advancements of technology, she is also a fan of different
+                        hobbies. She succesfully put up her own personal blog back then.
 
-                    Interested with learning the entire backend spectrum and well-informed with
-                    producing a well-design graphical user interface wireframes with the use
-                    of different editing softwares.</p>
+                        Interested with learning the entire backend spectrum and well-informed with
+                        producing a well-design graphical user interface wireframes with the use
+                        of different editing softwares.</p>
                 </div>
                 <div class="image-tricia developers-image">
                     <div class="tricia thin-border">
@@ -121,7 +121,7 @@
         </section>
     </main>
 
-    <footer class="copyright-black">
+    <footer class="copyright-black-member-page">
         <p>@ Copyright Alpha 2020.</p>
     </footer>
 
