--- a/member.html
+++ b/member.html
@@ -59,6 +59,22 @@
                         Knowledgeable in creating website layout or user interfaces by using standard HTML/CSS, &
                         Javascript practices. Can gather and refine specifications and requirements based on technical
                         needs. Trustworthy. Competent. Goal-Oriented. Passionate.</p>
+
+                        <div class="link-title">
+                            <h3>View My Projects</h3>
+                            <div class="line-below">
+                                <div class="line"></div>
+                            </div>
+                        </div>
+
+                        <div class="social-links-works">
+                            <ul>
+                                <li><a href="https://linkedin.com/in/prynstag" target="_blank"
+                                    data-placement="bottom" data-tooltip title="Linked In"><i class="fab fa-linkedin-in linkedin"></i></a></li>
+                                <li><a href="https://github.com/PrynsTag" target="_blank"
+                                    data-placement="bottom" data-tooltip title="Github"><i class="fab fa-github github"></i></a></li>
+                            </ul>
+                        </div>
                 </div>
             </div>
             <div class="developer-line">
@@ -85,6 +101,22 @@
                         Interested with learning the entire backend spectrum and well-informed with
                         producing a well-design graphical user interface wireframes with the use
                         of different editing softwares.</p>
+
+                        <div class="link-title">
+                            <h3>View My Projects</h3>
+                            <div class="line-below">
+                                <div class="line"></div>
+                            </div>
+                        </div>
+
+                        <div class="social-links-works">
+                            <ul>
+                                <li><a href="https://linkedin.com/in/prynstag" target="_blank"
+                                    data-placement="bottom" data-tooltip title="Linked In"><i class="fab fa-linkedin-in linkedin twicia"></i></a></li>
+                                <li><a href="https://github.com/PrynsTag" target="_blank"
+                                    data-placement="bottom" data-tooltip title="Github"><i class="fab fa-github github twicia"></i></a></li>
+                            </ul>
+                        </div>
                 </div>
                 <div class="image-tricia developers-image">
                     <div class="tricia thin-border">
@@ -116,6 +148,22 @@
                         2023 with the age of 23 years old. Deployed all of the portfolio projects at Github with the use
                         of Git Bash which is also a skill to add. For all of the certificates and achievements please go
                         to my Linked In account</p>
+
+                    <div class="link-title">
+                        <h3>View My Projects</h3>
+                        <div class="line-below">
+                            <div class="line"></div>
+                        </div>
+                    </div>
+
+                    <div class="social-links-works">
+                        <ul>
+                            <li><a href="https://linkedin.com/in/prynstag" target="_blank"
+                                data-placement="bottom" data-tooltip title="Linked In"><i class="fab fa-linkedin-in linkedin"></i></a></li>
+                            <li><a href="https://github.com/PrynsTag" target="_blank"
+                                data-placement="bottom" data-tooltip title="Github"><i class="fab fa-github github"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
