--- a/member.html
+++ b/member.html
@@ -60,21 +60,21 @@
                         Javascript practices. Can gather and refine specifications and requirements based on technical
                         needs. Trustworthy. Competent. Goal-Oriented. Passionate.</p>
 
-                        <div class="link-title">
-                            <h3>View My Projects</h3>
-                            <div class="line-below">
-                                <div class="line"></div>
-                            </div>
+                    <div class="link-title">
+                        <h3>View My Projects</h3>
+                        <div class="line-below">
+                            <div class="line"></div>
                         </div>
+                    </div>
 
-                        <div class="social-links-works">
-                            <ul>
-                                <li><a href="https://linkedin.com/in/prynstag" target="_blank"
-                                    data-placement="bottom" data-tooltip title="Linked In"><i class="fab fa-linkedin-in linkedin"></i></a></li>
-                                <li><a href="https://github.com/PrynsTag" target="_blank"
-                                    data-placement="bottom" data-tooltip title="Github"><i class="fab fa-github github"></i></a></li>
-                            </ul>
-                        </div>
+                    <div class="social-links-works">
+                        <ul>
+                            <li><a href="https://linkedin.com/in/prynstag" target="_blank" data-placement="bottom"
+                                    data-tooltip title="Linked In"><i class="fab fa-linkedin-in linkedin"></i></a></li>
+                            <li><a href="https://github.com/PrynsTag" target="_blank" data-placement="bottom"
+                                    data-tooltip title="Github"><i class="fab fa-github github"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="developer-line">
@@ -102,21 +102,22 @@
                         producing a well-design graphical user interface wireframes with the use
                         of different editing softwares.</p>
 
-                        <div class="link-title">
-                            <h3>View My Projects</h3>
-                            <div class="line-below">
-                                <div class="line"></div>
-                            </div>
+                    <div class="link-title">
+                        <h3>View My Projects</h3>
+                        <div class="line-below">
+                            <div class="line"></div>
                         </div>
+                    </div>
 
-                        <div class="social-links-works">
-                            <ul>
-                                <li><a href="https://linkedin.com/in/prynstag" target="_blank"
-                                    data-placement="bottom" data-tooltip title="Linked In"><i class="fab fa-linkedin-in linkedin twicia"></i></a></li>
-                                <li><a href="https://github.com/PrynsTag" target="_blank"
-                                    data-placement="bottom" data-tooltip title="Github"><i class="fab fa-github github twicia"></i></a></li>
-                            </ul>
-                        </div>
+                    <div class="social-links-works">
+                        <ul>
+                            <li><a href="https://linkedin.com/in/prynstag" target="_blank" data-placement="bottom"
+                                    data-tooltip title="Linked In"><i
+                                        class="fab fa-linkedin-in linkedin twicia"></i></a></li>
+                            <li><a href="https://github.com/PrynsTag" target="_blank" data-placement="bottom"
+                                    data-tooltip title="Github"><i class="fab fa-github github twicia"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="image-tricia developers-image">
                     <div class="tricia thin-border">
@@ -158,10 +159,10 @@
 
                     <div class="social-links-works">
                         <ul>
-                            <li><a href="https://linkedin.com/in/prynstag" target="_blank"
-                                data-placement="bottom" data-tooltip title="Linked In"><i class="fab fa-linkedin-in linkedin"></i></a></li>
-                            <li><a href="https://github.com/PrynsTag" target="_blank"
-                                data-placement="bottom" data-tooltip title="Github"><i class="fab fa-github github"></i></a></li>
+                            <li><a href="https://linkedin.com/in/prynstag" target="_blank" data-placement="bottom"
+                                    data-tooltip title="Linked In"><i class="fab fa-linkedin-in linkedin"></i></a></li>
+                            <li><a href="https://github.com/PrynsTag" target="_blank" data-placement="bottom"
+                                    data-tooltip title="Github"><i class="fab fa-github github"></i></a></li>
                         </ul>
                     </div>
                 </div>
