--- a/member.html
+++ b/member.html
@@ -69,10 +69,10 @@
 
                     <div class="social-links-works">
                         <ul>
-                            <li><a href="https://linkedin.com/in/prynstag" target="_blank" data-placement="bottom"
+                            <li><a href="https://www.linkedin.com/in/jc-garon/" target="_blank" data-placement="bottom"
                                     data-tooltip title="Linked In"><i class="fab fa-linkedin-in linkedin"></i></a></li>
-                            <li><a href="https://github.com/PrynsTag" target="_blank" data-placement="bottom"
-                                    data-tooltip title="Github"><i class="fab fa-github github"></i></a></li>
+                            <li><a href="https://github.com/CWGGa" target="_blank" data-placement="bottom" data-tooltip
+                                    title="Github"><i class="fab fa-github github"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -111,10 +111,10 @@
 
                     <div class="social-links-works">
                         <ul>
-                            <li><a href="https://linkedin.com/in/prynstag" target="_blank" data-placement="bottom"
-                                    data-tooltip title="Linked In"><i
+                            <li><a href="https://www.linkedin.com/in/tricia-relox/" target="_blank"
+                                    data-placement="bottom" data-tooltip title="Linked In"><i
                                         class="fab fa-linkedin-in linkedin twicia"></i></a></li>
-                            <li><a href="https://github.com/PrynsTag" target="_blank" data-placement="bottom"
+                            <li><a href="https://github.com/3ciarelox" target="_blank" data-placement="bottom"
                                     data-tooltip title="Github"><i class="fab fa-github github twicia"></i></a></li>
                         </ul>
                     </div>
